# ODE-artwork-downloader

./: .gitignore  BUILD.md  Cargo.toml  PROJECT.md  README.md  SEARCH.md  build.rs  config.json  secrets.json.example
.github/workflows/: release.yml
assets/icons/: icon.icns
docs/: DISCOGS-INTEGRATION.md  PLAN-disc-hashing.md  PLAN-user-agent.md  TODO-hfs-file-reading.md  bump_libs.md  bump_opticaldiscs_0.6.md  dbintegration.md  fuzzy_match_against_redump.md  wire_chd_audio_to_cd_da_reader.md
examples/: play_chd.rs  smoke_chd.rs  test_dat.rs
flatpak/: io.github.dani.ODEArtworkDownloader.desktop  io.github.dani.ODEArtworkDownloader.metainfo.xml  io.github.dani.ODEArtworkDownloader.yml
scripts/: generate-icon.sh
snap/: snapcraft.yaml
src/: config.rs  crypto.rs  lib.rs  main.rs  update.rs
src/api/: artwork.rs  discogs.rs  mobygames.rs  mod.rs  musicbrainz.rs  redump.rs
src/db/: fetch.rs  fuzzy.rs  lookup.rs  manager.rs  mod.rs  paths.rs  seed.rs  verify.rs
src/disc/: apm.rs  bincue.rs  cd_audio.rs  chd.rs  chd_audio.rs  content.rs  formats.rs  hasher.rs  hfs.rs  hfsplus.rs  identifier.rs  iso9660.rs  layout.rs  mod.rs  reader.rs  set_membership.rs  toc.rs
src/disc/browse/: entry.rs  filesystem.rs  hfs_fs.rs  hfsplus_fs.rs  iso9660_fs.rs  mod.rs  reader.rs
src/export/: badge.rs  mod.rs
src/gui/: app.rs  audio.rs  browse_view.rs  bulk.rs  hex_view.rs  mod.rs  progress.rs  text_view.rs
src/logging/: ui_logger.rs
src/search/: mod.rs
tests/: db_update_e2e.rs
