[package]
name = "ode-artwork-downloader"
version = "1.0.0"
edition = "2021"
description = "Cross-platform GUI application to download cover art for USBODE disc images"
license = "GPL-3.0"
repository = "https://github.com/dani/ODE-artwork-downloader"

[dependencies]
# GUI
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
rfd = "0.17"

# Image processing
image = "0.25"

# HTTP and serialization
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
regex = "1.10"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
base64 = "0.22"
tiny_http = "0.12"

# Browser automation
headless_chrome = "1.0"

# Encryption
aes-gcm = "0.10"

# Disc image formats (delegated to opticaldiscs)
opticaldiscs = { git = "https://github.com/danifunker/opticaldiscs-rs", features = ["toc"] }
musicbrainz_rs = "0.13"

# DAT file parsing
quick-xml = { version = "0.39", features = ["serde", "serialize"] }
zip = "8"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
