[package]
name = "ode-artwork-downloader"
version = "1.0.0"
edition = "2021"
description = "Cross-platform GUI application to download cover art for USBODE disc images"
license = "GPL-3.0"
repository = "https://github.com/dani/ODE-artwork-downloader"

[dependencies]
# GUI
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
rfd = "0.17"

# Image processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# HTTP and serialization
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
regex = "1.10"
strsim = "0.11"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
base64 = "0.22"
tiny_http = "0.12"

# Browser automation
headless_chrome = "1.0"

# Encryption
aes-gcm = "0.10"

# Disc image formats (delegated to opticaldiscs). 0.6.x uses libchdman-rs
# under the hood for CHD reading, with `prebuilt` enabled so CI doesn't have
# to compile MAME's C++.
opticaldiscs = { version = "0.6", features = ["toc"] }
musicbrainz_rs = "0.13"

# Redump SQLite lookup DB (download + open)
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
sha2 = "0.10"
directories = "5"
hex = "0.4"

# Track-level hashing for redump lookup
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.4"
# Direct CHD reader; uses the same prebuilt static lib opticaldiscs already
# links, so this adds no compile-time cost. libchdman-rs is a `links` crate,
# so the whole graph must resolve to a SINGLE copy — keep this in lockstep
# with opticaldiscs's own libchdman-rs pin (opticaldiscs 0.6.x -> 0.288.x).
# Bump both together when a new MAME release lands.
libchdman-rs = { version = "0.288.8", features = ["prebuilt"] }
# Temp scratch dir for CHD → BIN extraction during hashing.
tempfile = "3"

[dev-dependencies]

[build-dependencies]
winres = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

