[package]
name = "ode-artwork-downloader"
version = "1.0.0"
edition = "2021"
# `cargo run` targets the GUI app; the fuzzy_scan CLI stays at `--bin fuzzy_scan`.
default-run = "ode-artwork-downloader"
description = "Cross-platform GUI application to download cover art for USBODE disc images"
license = "GPL-3.0"
repository = "https://github.com/dani/ODE-artwork-downloader"

[dependencies]
# GUI
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
rfd = "0.17"

# Image processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# HTTP and serialization
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
regex = "1.10"
strsim = "0.11"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
base64 = "0.22"
tiny_http = "0.12"

# Browser automation
headless_chrome = "1.0"

# Encryption
aes-gcm = "0.10"

# Disc image formats (delegated to opticaldiscs). 0.5.x uses libchdman-rs
# under the hood for CHD reading, with `prebuilt` enabled so CI doesn't have
# to compile MAME's C++.
opticaldiscs = { version = "0.5", features = ["toc"] }
musicbrainz_rs = "0.13"

# Redump SQLite lookup DB (download + open)
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
sha2 = "0.10"
directories = "5"
hex = "0.4"

# Track-level hashing for redump lookup
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.4"
# Direct CHD reader; uses the same prebuilt static lib opticaldiscs already
# links, so this adds no compile-time cost. libchdman-rs is a `links` crate,
# so the whole graph must resolve to a SINGLE copy — keep this in lockstep
# with opticaldiscs's own libchdman-rs pin (opticaldiscs 0.5.x -> 0.288.x).
# Bump both together when a new MAME release lands.
libchdman-rs = { version = "0.288.9", features = ["prebuilt"] }
# Temp scratch dir for CHD → BIN extraction during hashing.
tempfile = "3"

# Format-agnostic CD-DA track machinery (Toc/Track types, track-bounds math
# incl. the CD-Extra gap, and the WAV header helper). ODE owns the CHD → sector
# decoding — via libchdman-rs above — behind this crate's `AudioSectorReader`
# seam, so it pulls in NO new native deps of its own.
cd-da-reader = { git = "https://github.com/danifunker/rust-cd-da-reader", branch = "file-based-backend" }

# In-app CD-DA playback (also used by the play_chd example). Pinned <0.20 for
# the OutputStream::try_default / Sink::try_new API used in gui/audio.rs.
rodio = "0.19"

[dev-dependencies]
# WAV writer for the play_chd `--save-wav` verification dump.
hound = "3.5"

[build-dependencies]
winres = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

